--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.3.0",
     "eslint-config-alloy": "^3.0.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.15"
   }
 }
